Revert "Revert "fixed map not showing while clicked after sign in clicked""
This reverts commit a7c88db8ff8f18abed85a2fcaf0845cdc6c8bbe4.

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -531,6 +531,7 @@ video {
 }
 
 #the-map {
+    display: none;
     bottom: 0;
     height: 55%;
     left: 0;
